terraform-eks/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: vulntrack-strict-mtls
  namespace: default
spec:
  selector:
    matchLabels:
      app: vulntrack
  mtls:
    mode: STRICT
