terraform-eks/vulntrack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulntrack
  namespace: default
  labels:
    app: vulntrack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vulntrack
  template:
    metadata:
      labels:
        app: vulntrack
      annotations:
        sidecar.istio.io/proxyCPU: "50m"
        sidecar.istio.io/proxyMemory: "64Mi"
        sidecar.istio.io/proxyCPULimit: "200m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"
    spec:
      containers:
        - name: vulntrack
          image: 825990809758.dkr.ecr.us-east-2.amazonaws.com/vulntrack:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "150m"
              memory: "448Mi"
            limits:
              cpu: "500m"
              memory: "640Mi"
          readinessProbe:
            httpGet:
              path: /vulntrack/api/ping
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /vulntrack/api/ping
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 20
